# spilled-energy

./: LICENSE.md  README.md  pyproject.toml
documentation/: api_reference.md  installation.md  introduction.md  scripts.md  usage.md
notebook/: synth_maths.ipynb
notebooks/: benchmark_methods.ipynb  measure_exact_answer.ipynb  synth_maths.ipynb
src/scripts/: benchmark_methods.py  test_measure_exact_answer.py
src/spilled_energy/: energy.py  extraction.py  generation.py  init.py  model.py  utils.py
